# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xNvJwZSEXyQFyhKUWtHF2V5AlF8m1i8eOcngwCXvuVmI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1f1U6hgV-bJsEprYymmMytkef1JumIltshhxlDzJDl4Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1LaAv9QGtiHCK67ttadT8UMSlXSrXvGSwthwERvacYiI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xdDpsrHl2FcnHsqJ3cOZInfkVvcpBIxUdXKcZzlW1cqE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1e4GLgE2I_qoGFBGhPtWq4IWGsa4iz8q_1NneCNCma2E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1bw6unC1TJDwJLd40a1WbdWoLnN1KQp_nd55RCQwYA4U=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1RmN-2cUorS1kBHcZcw0qdQSiv_CpPiac0dL_Gso4NYQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2-dbPmKK-d-TScA-F7xwaSaKnwwdL53gFRPoXbBfHKUQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT23TLpZVfZVkIG76knvT9WHC4TFcS6BGqQhCjDaHIG_sY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT261Z-SynM0iZrMEv2k_zDLdgTKiHMlRm8QwAv2zVcuXI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT26z-oT_g8TpA3Q3O_pX7z1P6h38cLs6q7My1TPyZC2ds=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2BxD2453iwj_NsAaAuNg2N0sVRfgeKOLatUHSdzXZevI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT17y665U16_AMwXzULIqslA89z3nva3cfwhbzTgFwedpg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1O9ByZJSQwxtxlzvyjqFF2VHZWWy6l__ieLISdgVz3Aw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1QYm_T_uw0pxDPTBXPaALfHJotZnNEqRkrjvLsvJDSok=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1TMMaXQTjpGp0H76HjhMd2Uv958ZS788ZrmtzjfJufhM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1kqElbMaBHJ2K6Xjg5LenOQrwSm91JUTrH9AbwTLTMQA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1pa8b1wp9igY9K5zuT5U1ydgbTd50h8kvsRKhg3Ye308=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1kZ_CHu99na3L236TtJdUbASJrGo-nrILiupnBqGR8v8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64728cqeXZ_9_KpG28lhsFut5-8m7OpWKIk2RCQVSZ--A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64QKg8X5RguhDNO0FVsHh5vX5te-rfUr3faEAUUiPsg2w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x11L4GlDNYtgONTOsHTyUtr1xZWY243nUf8S_Biq7qJY8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x146KnI_CP7oVvuELm82ap-QFHbhExt08Zaoplxjfsy3w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x16BcrAwiZrtL5SMtnbex1LvAK5NLNsN7xeEG7qLe2wo8=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_L-WhHbNHPJFdC8fFrlUzNHEDrLclakgn56aJz73EtDA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_Z6xIB1VxgAPlNq5uLcmPgGUgfK2wyOo-g_RAgk8V3xw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_lQ16FxCnfjcMvoSrSfWfpfBP4x8oe0TnE34QL2hep98=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI328nWGPMlLtqIIY0Re-1qvKGM3JVs3olmGa-6HPcXosdk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32UFwjOxwiIZ_06wZtNju-tvboz2G7wcyd0bMFCm-14cc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32ZmcMsYbfzv1QIw9WNpBOLjBUs9xFwnaBuyy_Zkb9pYQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32eylg4DgY7HjMjKBDCagkuuA1Qir-Dy1vrOYbT_HKxOE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xFtytcUJjjjVmtgqfKi-1GVFYHbDm82xv-NRzA8epks8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xH8Ah76aEvMM98meBdxypsI37wK8MYSCJWBY9i33P4m4=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT12qfiAHDAE0xAtzLGoehi2SWywbmIUFw4TY7K1_ebyYs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT15Mdk5PZD-5zzj8a6rCpHzSq1B3axnVQObQavSOiIj_Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT16sOwnY6TielKiktbFRQ0S9S8bUYWcbDCbqyHur5eniY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1887HOGIGUeqAo6oewPMoSWZR0M5PzuTl5mSfQ-YUeGY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1AVS4LtXAJDBgwdnaIhVq25RcGTJyLgFvcAxIrDpS6uQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1Go505e0t8rFv218WrN4p9AO6Dl56UQtUw1BHoT4gdeA=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT10nKsgnFZ9ipxJDRiQvisdu8gEoIz6JJ8yBQL6ZBmSz4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1EIbwlm29J3s5fiR1X20f3NxAOkXbeJVhtfjvgzCEcXI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3-1_sJY3IlQXxwmtv3IIfvIvBheumU60ZNnBukWIPP00=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT36cHvOlOcWh2ze3OIh_bss1avEWZyDvPCIiVoOPFhP8I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4J6TqlfWC1aOsHeTqNF_wWny7umWwN87aTJFu8qsvX3k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4nU6Y90PNn2Ajp6U64osRXbUHJODhfcGzQWPCVE1d5l8=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16K9uUt0UD8Jd_fT9NXpD_udSVMzj9ajAdblOwtpIZZ9M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16pnLn4s3RiKcLVufNHK1ihDf_6KgGgCQiQ-Zrn6SxW2k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16H4bPJa4BTZtOtKUPW2ZFqT44j13Ljn1R7e1Q62zLJ1g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16BIJ7KCP6Oy9GXEgbQ0MkrFfqz5DrfZyAHNAD6tGq6cc=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16-xM5UDCTBCtdUIfr271R5wfZ_DP-7VBDK-Pzl51z4Us=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16225XV83zOpQMqjjxnUxmJzFwHcuxANADvHIWhN-Yh4I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16aBqgrlm01T894jW3E9FWTIdNZiHVu-Bgtg2DVuLzKOc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16OG1lo-LXZFKS9wk8KRROqdAxEhaFEimwrFfacO_8Kgc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x167IVI0kAZuq6T1maE4foNIpO1aGM4CaDNFyMjseYCcXY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16zP8_-Hjxr9qsvdLNg6UErdGDZzu-xV8-6wEjFsq2LDI=',
      'err': 0,
    }),
  ])
# ---
